# tantivy_bench_graph

./: .gitignore  .prettierignore  Cargo.toml  README.md  at  bench_dates_tantivy.sh  bench_tantivy.sh  data.json  graph.js  index.html  run-at-startup.service  run_bench_ci.sh
bench_results/: aggregation::agg_bench::bench::bench_aggregation_average_f64  aggregation::agg_bench::bench::bench_aggregation_average_f64_multi  aggregation::agg_bench::bench::bench_aggregation_average_f64_opt  aggregation::agg_bench::bench::bench_aggregation_average_f64_sparse  aggregation::agg_bench::bench::bench_aggregation_average_u64  aggregation::agg_bench::bench::bench_aggregation_average_u64_and_f64  aggregation::agg_bench::bench::bench_aggregation_average_u64_and_f64_multi  aggregation::agg_bench::bench::bench_aggregation_average_u64_and_f64_opt  aggregation::agg_bench::bench::bench_aggregation_average_u64_and_f64_sparse  aggregation::agg_bench::bench::bench_aggregation_average_u64_multi  aggregation::agg_bench::bench::bench_aggregation_average_u64_opt  aggregation::agg_bench::bench::bench_aggregation_average_u64_sparse  aggregation::agg_bench::bench::bench_aggregation_avg_and_range_with_avg  aggregation::agg_bench::bench::bench_aggregation_avg_and_range_with_avg_multi  aggregation::agg_bench::bench::bench_aggregation_avg_and_range_with_avg_opt  aggregation::agg_bench::bench::bench_aggregation_avg_and_range_with_avg_sparse  aggregation::agg_bench::bench::bench_aggregation_histogram_only  aggregation::agg_bench::bench::bench_aggregation_histogram_only_hard_bounds  (+369 more)
src/: main.rs
