[package]
name = "csv_to_uplot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
csv = "1.1.6"
rust_bench_parser = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.85"

